2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/array.icc (vector_sort): Bugfix.

2006-02-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/parser.yy (output_def_head_with_mode_switch): new
	production. Result: dashes and underscores may be used in the
	\paper block.

	* lily/lexer.ll: add DASHED_WORD.  Accept in INITIAL mode.

	* python/convertrules.py (conv): oops. One slash too much.

2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh (sort): Remove, replace by
	::vector_sort.  Update callers.

	* flower/include/std-vector.hh (slice): Remove.  Update callers.
	(sort): Bugfix.

	* flower/test-std.cc (vector_sort): New test.

2006-02-01  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/putting.itely: fixes from Erik.

2006-02-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/test-std.cc: Add simple unit test for vector migration.

	* stepmake/stepmake/test*: Unit test support.

	* flower/include/std-vector.hh (del): Remove.  Use erase (),
	update callers.

	* flower/include/array.hh (begin, end): Add.
	(del, get): Remove.

2006-02-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/lily-guile-macros.hh (MAKE_SCHEME_CALLBACK): use
	std::string not String. 

	* lily/context-def.cc (path_to_acceptable_context): use INT_MAX
	iso UINT_MAX.

	* lily/prob.cc (Prob): copy type_ too.

	* lily/lily-guile.cc (mangle_cxx_identifier): new
	function. Class_bla::foo_bar_[px] ->
	ly:class-bla::foo-bar[?!]. Changes throughout

2006-01-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/guile-compatibility.hh (scm_from_unsigned): add scm_from_unsigned().

	* lily/beam.cc (calc_direction): take dir from visible stem in
	degenerate case.

2006-01-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/melody-spanner.cc (spanner::calc_neutral_stem_direction):
	Fix -1, >=0 boundary checks for unsigned vsize.

	* lily/separating-group-spanner.cc (spanner::find_rods): Fix >=0
	loop for unsigned vsize.
