@@ -1,5 +1,11 @@
 2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* flower/include/std-vector.hh (insert): Remove, replace by
+	std::vector interface.  Update callers.
+
+	* flower/include/array.icc (insert): Change signature to
+	match std::vector interface.
+	
 	* flower/include/array.icc (vector_sort): Bugfix.
 
 2006-02-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
